<resources>
    <string name="app_name" translatable="false">WeatherApp</string>
    <string name="cancel_txt">Cancel</string>
    <string name="addCity_txt">Add City</string>
    <string name="agreed_txt">Agreed</string>
    <string name="prev_txt">Previous</string>
    <string name="enterCityName_txt">Enter City Name</string>
    <string name="selectCity_txt">Select City</string>
    <string name="errorMessage">Error message!</string>
    <string name="tempDefault" translatable="false">Tt</string>
    <string name="na" translatable="false">N/A</string>
    <string name="grad" translatable="false">℃</string>
    <string name="cityName">City Name</string>
    <string name="description">Description</string>
    <string name="weather">Weather</string>
    <string name="temp">Temperature: %1$s</string>
    <string name="windSpeed">WindSpeed: %1$s</string>
    <string name="humidity">Humidity: %1$s</string>
    <string name="pressure">Pressure: %1$s</string>
    <string name="weatherIcon">Weather icon</string>
    <string name="loadingError">Loading error!</string>
    <string name="cityLoadingError">City %1$s loading error!</string>
    <string name="dataOut">Data is out of date.</string>
    <string name="lastUpdate">Last Update: %1s</string>
    <string name="incorrectCityName">Incorrect city name: %1s</string>
    <string name="cityNotFound">City not found! - %1s</string>
    <string name="internetConnectionError">Internet connection error!</string>
</resources>
