<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.constraint.ConstraintLayout
        style="@style/toolbar"
        android:id="@+id/itemLayout"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <ImageView
            android:id="@+id/cityIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_na"
            android:contentDescription="@string/weatherIcon" />

        <TextView
            style="@style/text"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cityName" />

        <TextView
            style="@style/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/temp"
            android:layout_marginEnd="10dp"
            android:id="@+id/weatherMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather" />

        <TextView
            style="@style/text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cityIcon"
            android:layout_marginEnd="10dp"
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/cityIcon"
            android:text="@string/temp" />
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>